@@ -3,9 +3,14 @@ GTM OAuth 2 Release Notes
 Project site:     http://code.google.com/p/gtm-oauth2/
 Discussion group: http://groups.google.com/group/gtm-oauth2
 
+14-March-2012
+
+Added notification on access token refresh.
+
+
 7-October-2011
 
-Added notifications for starting and stopping loads of UIWebView
+Added notifications for starting and stopping loads of UIWebView.
 
 
 30-September-2011
